squid (2.6.4-1wm4) unstable; urgency=low
  * Fix bug in initscript COSS preparation



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16931 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/changelog
+++ b/debs/squid/debian/changelog
@@ -1,3 +1,9 @@
+squid (2.6.4-1wm4) unstable; urgency=low
+
+  * Fix bug in initscript COSS preparation
+
+ -- Mark Bergsma <mark@wikimedia.org>  Tue, 10 Oct 2006 23:08:33 +0000
+
 squid (2.6.4-1wm3) unstable; urgency=low
 
   * Don't install /etc/squid/squid.conf
