--- a/debs/wikimedia-base/debian/changelog
+++ b/debs/wikimedia-base/debian/changelog
@@ -1,3 +1,12 @@
+wikimedia-base (0.02) unstable; urgency=low
+
+  * Set up APT package pinning for Wikimedia packages in /etc/apt/preferences
+  * No longer depend on package mcelog, as it doesn't install on i386
+  * Depend on screen
+  * Optimize TCP sysctl settings
+
+ -- Mark Bergsma <mark@wikimedia.org>  Wed, 11 Oct 2006 17:15:39 +0000
+
 wikimedia-base (0.01) unstable; urgency=low
 
   * Initial Release.
