wikimedia-base (0.03) dapper; urgency=low
  * Do not remove sysctl.conf settings on package upgrade,
    as the user may have altered them
  * Depend on mcelog, but only for arch amd64



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16968 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/changelog
+++ b/debs/wikimedia-base/debian/changelog
@@ -1,3 +1,11 @@
+wikimedia-base (0.03) dapper; urgency=low
+
+  * Do not remove sysctl.conf settings on package upgrade,
+    as the user may have altered them
+  * Depend on mcelog, but only for arch amd64
+
+ -- Mark Bergsma <mark@wikimedia.org>  Thu, 12 Oct 2006 11:52:35 +0000
+
 wikimedia-base (0.02) unstable; urgency=low
 
   * Set up APT package pinning for Wikimedia packages in /etc/apt/preferences
