squid (2.6.4-2wm3) dapper; urgency=low
  * Install /etc/default/squid as a conffile, not in postinst



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17240 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/changelog
+++ b/debs/squid/debian/changelog
@@ -1,3 +1,9 @@
+squid (2.6.4-2wm3) dapper; urgency=low
+
+  * Install /etc/default/squid as a conffile, not in postinst
+
+ -- Mark Bergsma <mark@wikimedia.org>  Tue, 24 Oct 2006 14:59:45 +0000
+
 squid (2.6.4-2wm2) dapper; urgency=low
 
   * Use 16384 FDs by default
