squid (2.6.5-1wm2) edgy; urgency=low
  * Include a proposed patch for squid bug #1818, COSS rebuild crashes
  * Never strip binaries



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17439 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/changelog
+++ b/debs/squid/debian/changelog
@@ -1,3 +1,10 @@
+squid (2.6.5-1wm2) edgy; urgency=low
+
+  * Include a proposed patch for squid bug #1818, COSS rebuild crashes
+  * Never strip binaries
+
+ -- Mark Bergsma <mark@wikimedia.org>  Sun,  5 Nov 2006 14:12:13 +0000
+
 squid (2.6.5-1wm1) edgy; urgency=medium
 
   * New upstream version 2.6.STABLE5
