squid (2.6.5-1wm3) edgy; urgency=low
  * Fix 'dd' line in initscript 'clean'



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17649 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/changelog
+++ b/debs/squid/debian/changelog
@@ -1,3 +1,9 @@
+squid (2.6.5-1wm3) edgy; urgency=low
+
+  * Fix 'dd' line in initscript 'clean'
+
+ -- Mark Bergsma <mark@wikimedia.org>  Mon, 13 Nov 2006 16:19:30 +0000
+
 squid (2.6.5-1wm2) edgy; urgency=low
 
   * Include a proposed patch for squid bug #1818, COSS rebuild crashes
