added  option (Bug 8011)
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17863 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/README
+++ b/README
@@ -87,5 +87,9 @@ $wgCategoryTreeDisableCache - disabled the parser cache for pages with a
 $wgCategoryTreeHTTPCache - enable HTTP cache for anon users. Default is
                           false.
 
+$wgCategoryTreeOmitNamespace - never show namespace prefix. Default is
+                               false. Patch contributed by Manuel Schneider
+                               <manuel.schneider@wikimedia.ch>, Bug 8011
+
 --------------------------------------------------------------------------
 EOF
