--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,6 +1,15 @@
 For a documentation of all features, see http://semantic-mediawiki.org
 
 
+== SMW 1.7.1 ==
+
+THIS IS NOT A RELEASE YET 
+
+Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
+production until the actual release.
+
+* Fixed fatal error occurring for some invalid property definitions (bug 33652).
+
 == SMW 1.7.0.1 ==
 
 Released on January 9, 2012.
