--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,13 +1,14 @@
 For a documentation of all features, see http://semantic-mediawiki.org
 
 
-== SMW 1.7.1 ==
+== SMW 1.7.0.2 ==
 
 THIS IS NOT A RELEASE YET 
 
-Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
+Semantic MediaWiki 1.7.0.2 is currently in beta-quality and is not recommended for use in
 production until the actual release.
 
+* Fixed creation of concept cache and display of matching objects on concept pages (bug 32592, 32718).
 * Fixed fatal error occurring for some invalid property definitions (bug 33652).
 * Fixed error in RSS when using creator or date parameters (bug 33721).
 * Fixed incorrect offset of export formats (bug 33726).
